[project]
name = "uptimal"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Odler", email = ""},
]
dependencies = ["requests>=2.32.4", "polars>=1.32.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
